Added a little bit of CSS

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,16 @@ and open the template in the editor.
 				});
 			})
 		</script>
+
+		<style type="text/css" media="screen">
+			textarea{
+				font-size:11px;
+			}
+		</style>
+
   </head>
   <body>
-  	<textarea cols="50" rows="10" id="input"></textarea>
+  	<textarea cols="80" rows="12" id="input"></textarea>
 		<button id="submit_btn">Submit</button>
 		<div id="results"></div>
   </body>
